Streamlined with bitbucket repository. Added human readable labels and fixed pluralLabel bug for 'Geooperators'.

--- a/www/user.css
+++ b/www/user.css
@@ -78,6 +78,10 @@ div.exhibit-focusDialog {
     right: 25%;
 }
 
+td.exhibit-lens-property-name {
+    width: 200px;
+}
+
 #page {
     background-color: #FFFFFF;
     /*height: 5650px;*/
